2004-09-03  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* demo/image.dem: Added endian=little where necessary.

2004-09-02  Ethan Merritt  <merritt@u.washington.edu>
	* demo/all.dem: Include demos for candlesticks, multiplot, and
	enhanced text mode in the all.dem script used by "make check".

2004-09-01  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_set_color PNG_image) term/pdf.trm (PDF_image)
	term/post.trm (PS_image): Change call from rgb255_from_gray() to
	rgb255maxcolors_from_gray(). Fixes color mapping with 'set palette
	maxcolors'.

	* src/getcolor.c: Remove unused routine rgb255_from_gray.

	* term/gd.trm: Add WITH_IMAGE support for gif terminal also.

2004-09-01  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* demo/Makefile.am.in: Add new binary demo files to Makefile.am
	target.

	src/Makefile.am: Add missing binary.h to bf_test_SOURCES.

2004-09-01  Daniel Sebald  <daniel.sebald@ieee.org>

	* NEWS: Updated.

	* configure.in: Added enable and define switches to activate new
	portions of code:
	  WITH_IMAGE (--enable-with-image) code for plotting images
	  WITH_IMAGE_VERIFY_ALL_PIXEL_LOCATIONS (--enable-image-grid-verify)
	    code for verifying every point in image grid is uniformly spaced
	  BINARY_DATA_FILE (--enable-binary-data-file) code to allow reading
	    general binary data files
	  BINARY_X11_POLYGON (--enable-binary-x11-polygon) code for X11 that
	    allows transferring polygon information as binary values rather
	    than ASCII, to save space in plot buffers

	* demo/all.dem: Added inclusion of image.dem.

	* demo/asciimat.dat demo/blutux.rgb demo/demo.edf demo/scatter2.bin
	demo/sine.bin demo/using.bin: New datafiles required by image.dem.

	* demo/image.dem: New demo to illustrate and test various new image
	and binary and matrix data file features.

	* docs/gnuplot.doc: Added documentation for image features and general
	binary file syntax.  Also, removed language indicating gnuplot matrix